# mimpi

./: AUTHORS  INSTALL  Makefile  Makefile.in  Makefile.linux  Makefile.sp2  Makefile.sunos  README.md  acconfig.h  config.cache  config.status  configure  configure.in  w32.dsw
config/: config.status
example/: Makefile  Makefile.in  Makefile.linux  Makefile.sp2  Makefile.sunos
example/hello/: Makefile  Makefile.in  Makefile.linux  Makefile.sp2  Makefile.sunos  hello_world.c  hello_world.sh
example/ping/: Makefile  Makefile.in  Makefile.linux  Makefile.sp2  Makefile.sunos  ping.c  ping.sh
example/ping/ping/: Makefile.in  Makefile.linux  Makefile.sp2  Makefile.sunos
include/: config.h  config.h.in  configure  mpi.h
info/: i-m-mpi-v6.ppt  ms.2.ppt
lib/: lzolib.dsp  mplib.dsp  mplib.mak
src/: Makefile  Makefile.in  Makefile.linux  Makefile.sp2  Makefile.sunos
src/base/: Makefile  Makefile.in  Makefile.linux  Makefile.sp2  Makefile.sunos
src/base/l_adt/: l_buffa.c  l_buffa.h  l_buffa.m  l_darray.c  l_darray.h  l_dhash.c  l_dhash.h  l_dstack.c  l_dstack.h
src/base/l_alloc/: i_alloc_debug.c  i_alloc_debug.h  i_alloc_final.h  i_alloc_final.m  l_alloc.c  l_alloc.h  l_alloc.m  v_alloc.c  v_alloc.h  v_alloc.m  x_alloc.c  x_alloc.h  x_alloc.m
src/base/l_basic/: c_basic.h
src/base/l_conf/: c_box_base_ver.h  c_conf.h  c_ext_system.h  c_ext_user.h  c_predef_system.h  c_predef_user.h
src/base/l_debug/: l_debug.c  l_debug.h  l_debug.m  l_debug_dfa.c  l_debug_dfa.h  l_debug_msg.c  l_debug_msg.h
src/base/l_file/: i_file_posix.c  i_file_posix.h  i_file_posix.m  i_file_win32.c  i_file_win32.h  i_file_win32.m  v_file.c  v_file.h  v_file.m  x_file.c  x_file.h  x_file.m
src/base/l_process/: i_process_posix.c  i_process_posix.h  i_process_posix.m  i_process_win32.c  i_process_win32.h  i_process_win32.m  v_process.c  v_process.h  v_process.m  x_process.c  x_process.h  x_process.m
src/base/l_socket/: i_socket_posix.c  i_socket_posix.h  i_socket_posix.m  i_socket_win32.c  i_socket_win32.h  i_socket_win32.m  v_socket.c  v_socket.h  v_socket.m  x_socket.c  x_socket.h  x_socket.m
src/base/l_string/: i_dtd_prolog.c  i_dtd_prolog.h  i_dtd_xml.c  i_dtd_xml.h  l_string.c  l_string.h  v_dtd.c  v_dtd.h  v_dtd.m  x_dtd.c  x_dtd.h  x_dtd.m  x_string.c  x_string.h  x_string.m
src/base/l_thread/: c_thread_ret.h  i_thread_posix.c  i_thread_posix.h  i_thread_posix.m  i_thread_shadow.c  i_thread_shadow.h  i_thread_shadow.m  i_thread_win32.c  i_thread_win32.c.cs  i_thread_win32.h  i_thread_win32.m  i_thread_win32.m.cs  l_thread_pool.c  l_thread_pool.h  v_thread.c  v_thread.h  v_thread.m  v_thread_pool.c  v_thread_pool.h  x_thread.c  x_thread.h  x_thread.m
src/base/l_time/: l_time.c  l_time.h  l_time.m  l_time_msdos.c  l_time_posix.c  l_time_win32.c  x_time.c  x_time.h  x_time.m
src/base/l_zlib/: i_zl_lzo.c  i_zl_lzo.h  i_zl_lzrw3.c  i_zl_lzrw3.h  i_zl_zlib.c  i_zl_zlib.h  l_zl.h  v_zl.c  v_zl.h  v_zl.m  x_zl.c  x_zl.h  x_zl.m
src/console/: Makefile  Makefile.in  Makefile.linux  Makefile.sp2  Makefile.sunos  l_condition_msg.c  l_condition_msg.h  l_defcon.h  l_stack_msg.c  l_stack_msg.h  l_trace_msg.c  l_trace_msg.h  l_verbose_msg.c  l_verbose_msg.h
src/mp/: Makefile  Makefile.in  Makefile.linux  Makefile.sp2  Makefile.sunos  mpi.h  xmp.h
src/mp/mpi/: Makefile  Makefile.in  Makefile.linux  Makefile.sp2  Makefile.sunos  c_base.h  c_const.h  c_error.h  c_mapver.h  l_datatype.c  l_datatype.h  l_filter_request.c  l_filter_request.h  l_filter_request.m  l_multi_request.c  l_multi_request.h  l_params_mpi.c  l_params_mpi.h  l_society.c  l_society.h  mpi_allgather.c  mpi_allgather.h  mpi_allreduce.c  mpi_allreduce.h  mpi_barrier.c  mpi_barrier.h  mpi_bcast.c  mpi_bcast.h  mpi_comm.c  mpi_comm.h  mpi_comm_create.c  mpi_comm_create.h  mpi_comm_group.c  mpi_comm_group.h  mpi_comm_rank.c  mpi_comm_rank.h  mpi_comm_size.c  mpi_comm_size.h  mpi_finalize.c  mpi_finalize.h  (+55 more)
src/mp/xmp/: Makefile  Makefile.in  Makefile.linux  Makefile.sp2  Makefile.sunos
src_EXTERN/: Makefile  Makefile.in  Makefile.linux  Makefile.sp2
src_EXTERN/lzo/: Makefile  Makefile.in  Makefile.linux  testmini
src_EXTERN/lzrw3/: Makefile  Makefile.in  Makefile.linux  compress.h  lzrw3.c  port.h  test_lzrw3  test_lzrw3.c  time.c
test/: Makefile  Makefile.in  Makefile.linux  Makefile.sp2  Makefile.sunos
test/efficiency/: Makefile  Makefile.in  Makefile.linux  Makefile.sp2  Makefile.sunos
test/efficiency/aplication/: Makefile  Makefile.in  Makefile.linux  Makefile.sp2  Makefile.sunos
test/efficiency/base/: Makefile  Makefile.in  Makefile.linux  Makefile.sp2  Makefile.sunos
test/efficiency/console/: Makefile  Makefile.in  Makefile.linux  Makefile.sunos  l_condition_msg.c
test/efficiency/mp/: Makefile  Makefile.in  Makefile.linux  Makefile.sp2
test/efficiency/plataform/: Makefile  Makefile.in  Makefile.linux  Makefile.sp2  Makefile.sunos
test/integrity/: Makefile  Makefile.in  Makefile.linux  Makefile.sp2  Makefile.sunos
test/integrity/base/: Makefile  Makefile.in  Makefile.linux  Makefile.sp2  Makefile.sunos
test/integrity/console/: Makefile  Makefile.in  Makefile.linux  Makefile.sunos  l_condition_msg.c  l_stack_msg.c  l_trace_msg.c  l_verbose_msg.c
test/performance/: Makefile  Makefile.in  Makefile.linux  Makefile.sp2  Makefile.sunos
util/: Makefile  Makefile.in  Makefile.linux  Makefile.sp2  Makefile.sunos
util/mpi_exec/: Makefile  Makefile.in  Makefile.linux  Makefile.sp2  Makefile.sunos  c_execver.h  l_mpi_exec.c  l_mpi_exec.h  mpi_exec.c
util/mpi_start_console/: Makefile.in  Makefile.linux  Makefile.sp2  Makefile.sunos  c_startver.h  l_mpi_start.c  l_mpi_start.h  mpi_start.c
util/mpi_ws/: mpi_ws.html
util/script/: busca.sh  change.sh  clines.sh  jc.bat  jc.sh  mata.sh  mpi.launch
util/test_reduce/: Makefile  Makefile.in  Makefile.linux  Makefile.sp2  Makefile.sunos  test_reduce.c
util/test_run/: Makefile  Makefile.in  Makefile.linux  Makefile.sp2  Makefile.sunos  test_run.c
util/xmp_run/: Makefile  Makefile.in  Makefile.linux  Makefile.sp2  Makefile.sunos  xmp_run.c
(+674 files in other folders)
